--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "@react-router/fs-routes": "^7.2.0",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
+    "@tanstack/react-query": "^5.79.0",
     "antd": "^5.24.2",
     "isbot": "^5.1.17",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router": "^7.2.0"
+    "react-router": "^7.2.0",
+    "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
     "@react-router/dev": "^7.2.0",
