--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,13 @@
     "@react-router/serve": "^7.2.0",
     "@tanstack/react-query": "^5.79.0",
     "antd": "^5.24.2",
+    "axios": "^1.9.0",
+    "dompurify": "^3.2.6",
     "isbot": "^5.1.17",
+    "marked": "^15.0.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-quill": "^2.0.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.6.1"
   },
